--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,5 +12,6 @@
     </head>
     <body>
         <div id="app">{{markup}}</div>
+        <script>window.__initialData__={{{data}}}</script>
     </body>
 </html>
